# Software-Onboarding

./: .gitignore  README.md  SOFTWARE_ONBOARDING_2.md
Software-Onboarding-1/: SOFTWARE_ONBOARDING_1.md  data.yaml  requirements.txt  test.py  train.py
Software-Onboarding-2/: CMakeLists.txt  SOFTWARE_ONBOARDING_2.md
Software-Onboarding-2/src/: main.cpp  test_setup.cpp
Software-Onboarding-3/: Dockerfile  SOFTWARE_ONBOARDING_3.md
